--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,11 @@
 
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
+build/*
 
 # Dependency directories (remove the comment below to include it)
-# vendor/
+vendor/
+
+# Temporary certs
+*.pem
+*.key
